WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219553
Stop constructing unnecessary AudioBus in SincResampler
https://bugs.webkit.org/show_bug.cgi?id=219553
Summary
Stop constructing unnecessary AudioBus in SincResampler
Chris Dumez
Reported
2020-12-04 13:39:54 PST
Stop constructing unnecessary AudioBus in SincResampler. Instead, pass the float* buffer to the lambda directly.
Attachments
Patch
(8.58 KB, patch)
2020-12-04 13:44 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-12-04 13:44:53 PST
Created
attachment 415455
[details]
Patch
Darin Adler
Comment 2
2020-12-04 14:31:58 PST
Comment on
attachment 415455
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=415455&action=review
> Source/WebCore/platform/audio/MultiChannelResampler.cpp:56 > + void provideInputForChannel(float* buffer, size_t framesToProcess, unsigned channelIndex)
Surprised that this function can just return and do nothing, with no indication to the caller. But that’s not new.
Chris Dumez
Comment 3
2020-12-04 14:34:15 PST
Comment on
attachment 415455
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=415455&action=review
>> Source/WebCore/platform/audio/MultiChannelResampler.cpp:56 >> + void provideInputForChannel(float* buffer, size_t framesToProcess, unsigned channelIndex) > > Surprised that this function can just return and do nothing, with no indication to the caller. But that’s not new.
I actually does not in practice. You can see that there are assertions for all conditions where we early return. For some reason though, the person who wrote this code did both assertions and early return in release if the assertion would have failed.
Chris Dumez
Comment 4
2020-12-04 14:39:40 PST
Comment on
attachment 415455
[details]
Patch Clearing flags on attachment: 415455 Committed
r270460
: <
https://trac.webkit.org/changeset/270460
>
Chris Dumez
Comment 5
2020-12-04 14:39:42 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-12-04 14:40:27 PST
<
rdar://problem/71994027
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug