Stop constructing unnecessary AudioBus in SincResampler https://bugs.webkit.org/show_bug.cgi?id=219553

Reviewed by Darin Adler.

Stop constructing unnecessary AudioBus in SincResampler. Instead, pass the float* buffer
to the lambda directly.

* platform/audio/MultiChannelResampler.cpp:
(WebCore::MultiChannelResampler::ChannelProvider::provideInputForChannel):
(WebCore::MultiChannelResampler::process):
* platform/audio/SincResampler.cpp:
(WebCore::SincResampler::consumeSource):
(WebCore::SincResampler::process):
* platform/audio/SincResampler.h:

Canonical link: https://commits.webkit.org/232138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270460 268f45cc-cd09-0410-ab3c-d52691b4dbfc